Merged getPosts functions and Fixes of addPost and editPost